# single-file-dioxus-ssr-hydrate

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
src/: main.rs
