[package]
name = "single-file-dioxus-ssr-hydrate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.12", optional = true }
dioxus = "0.3.2"
dioxus-ssr = "0.3.0"
dioxus-web = { version = "0.3.1", features = ["hydrate"], optional = true }
http = { version = "0.2.9", optional = true }
tokio = { version = "1.27.0", features = ["full"], optional = true }
tower-http = { version = "0.4.0", features = ["fs"], optional = true }

[features]
default = ["frontend"]
backend = ["axum", "tokio", "tower-http", "http"]
frontend = ["dioxus-web"]

[profile.release]
lto = true
panic = "abort"
opt-level = 'z'
strip = true
codegen-units = 1
